--- a/stable/heapster/templates/service.yaml
+++ b/stable/heapster/templates/service.yaml
@@ -9,12 +9,15 @@ metadata:
     release: "{{ .Release.Name }}"
     {{- range $key, $value := .Values.service.labels }}
     {{ $key }}: {{ $value }}
-    {{- end }}    
+    {{- end }}
 spec:
   type: {{ .Values.service.type }}
   ports:
   - port: {{ .Values.service.externalPort }}
     targetPort: {{ .Values.service.internalPort }}
     protocol: TCP
+  {{- if .Values.service.nodePort }}
+    nodePort: {{ .Values.service.nodePort }}
+  {{- end }}
   selector:
     app: {{ template "heapster.fullname" . }}
